mdapipkg/objects/Interest__c.object
<CustomObject>
    <description>This houses the public interests</description>
    <fields>
        <fullName>Business_Travel_Frequency__c</fullName>
        <label>Business Travel Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Extensively (15+)</fullName>
                </value>
                <value>
                    <fullName>Travel Moderately (6-14)</fullName>
                </value>
                <value>
                    <fullName>Travel Rarely (0-5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Text__c</fullName>
        <label>Category(Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Travel Frequency</fullName>
                </value>
                <value>
                    <fullName>Communications Preferences</fullName>
                </value>
                <value>
                    <fullName>Community Service</fullName>
                </value>
                <value>
                    <fullName>Debt Management</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Family/Leisure Travel Frequency</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Leadership issues</fullName>
                </value>
                <value>
                    <fullName>Learning More</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Management Team</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other(Free Form Entry)</fullName>
                </value>
                <value>
                    <fullName>Other Languages</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Regional Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Method_Preference__c</fullName>
        <label>Communication Method Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communications_Preferences__c</fullName>
        <label>Communications Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Points</fullName>
                </value>
                <value>
                    <fullName>Business Events</fullName>
                </value>
                <value>
                    <fullName>Chapter Leadership Workshops</fullName>
                </value>
                <value>
                    <fullName>Communications related to Social Media</fullName>
                </value>
                <value>
                    <fullName>Event Opportunities eNewsletter (bimonthly)</fullName>
                </value>
                <value>
                    <fullName>Family Events (spouse/partner, children and YNG+)</fullName>
                </value>
                <value>
                    <fullName>Family News</fullName>
                </value>
                <value>
                    <fullName>Forum News</fullName>
                </value>
                <value>
                    <fullName>Global Leadership Conference (GLC)</fullName>
                </value>
                <value>
                    <fullName>Global Networking Summit</fullName>
                </value>
                <value>
                    <fullName>Ignite eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Innovation Week</fullName>
                </value>
                <value>
                    <fullName>Personal Events</fullName>
                </value>
                <value>
                    <fullName>Regional Events</fullName>
                </value>
                <value>
                    <fullName>Regional news</fullName>
                </value>
                <value>
                    <fullName>Social Engagement Events</fullName>
                </value>
                <value>
                    <fullName>Universities</fullName>
                </value>
                <value>
                    <fullName>YPO Digest</fullName>
                </value>
                <value>
                    <fullName>YPO EDGE</fullName>
                </value>
                <value>
                    <fullName>YPO Global Pulse</fullName>
                </value>
                <value>
                    <fullName>YPO News and Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulates__c</fullName>
        <label>Consulates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exp_Business__c</fullName>
        <label>Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Other Businesses</fullName>
                </value>
                <value>
                    <fullName>Career Transitions</fullName>
                </value>
                <value>
                    <fullName>CHLDFAMBUS</fullName>
                </value>
                <value>
                    <fullName>Developing My Board</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Africa</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Asia</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Australia/NZ</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Canada</fullName>
                </value>
                <value>
                    <fullName>Doing Business in China</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Europe</fullName>
                </value>
                <value>
                    <fullName>Doing Business in India</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Latin America</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Middle East</fullName>
                </value>
                <value>
                    <fullName>Doing Business in United States</fullName>
                </value>
                <value>
                    <fullName>Examining Corporate Strategy</fullName>
                </value>
                <value>
                    <fullName>Exiting Family Business</fullName>
                </value>
                <value>
                    <fullName>Family Business (General Issues)</fullName>
                </value>
                <value>
                    <fullName>Going Global</fullName>
                </value>
                <value>
                    <fullName>Hiring &amp; Retaining Execs</fullName>
                </value>
                <value>
                    <fullName>Mergers/Acquisitions</fullName>
                </value>
                <value>
                    <fullName>New Sources of Capital</fullName>
                </value>
                <value>
                    <fullName>Selling My Business</fullName>
                </value>
                <value>
                    <fullName>Starting a Business</fullName>
                </value>
                <value>
                    <fullName>Succession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Family_Leisure_Travel_Frequency__c</fullName>
        <label>Family/Leisure Travel Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Extensively (15+)</fullName>
                </value>
                <value>
                    <fullName>Travel Moderately (6-14)</fullName>
                </value>
                <value>
                    <fullName>Travel Rarely (0-5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Family__c</fullName>
        <label>Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Children</fullName>
                </value>
                <value>
                    <fullName>Balancing Work And Family</fullName>
                </value>
                <value>
                    <fullName>Blended Families</fullName>
                </value>
                <value>
                    <fullName>Family Finances</fullName>
                </value>
                <value>
                    <fullName>Father/Daughter Relationships</fullName>
                </value>
                <value>
                    <fullName>Father/Son Relationships</fullName>
                </value>
                <value>
                    <fullName>Generational Transitions</fullName>
                </value>
                <value>
                    <fullName>Learning Challenges</fullName>
                </value>
                <value>
                    <fullName>Marriage/Couple Relationships</fullName>
                </value>
                <value>
                    <fullName>Mother/Daughter Relationships</fullName>
                </value>
                <value>
                    <fullName>Mother/Son Relationships</fullName>
                </value>
                <value>
                    <fullName>Needs of Aging Parents</fullName>
                </value>
                <value>
                    <fullName>Relating to Pre-adolescents (6-12)</fullName>
                </value>
                <value>
                    <fullName>Relating to Teenagers (13-18)</fullName>
                </value>
                <value>
                    <fullName>Relating to Toddlers (2-5)</fullName>
                </value>
                <value>
                    <fullName>Relating to Young Adults (18)</fullName>
                </value>
                <value>
                    <fullName>School Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Management_Team__c</fullName>
        <label>Management Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter Health</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Insights</fullName>
                </value>
                <value>
                    <fullName>Events Management</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>For deletion</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>Forum Management</fullName>
                </value>
                <value>
                    <fullName>GLC Team</fullName>
                </value>
                <value>
                    <fullName>Global Operations</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Member Benefits Alliances &amp; Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Member Services</fullName>
                </value>
                <value>
                    <fullName>Membership Development</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
                <value>
                    <fullName>RCC</fullName>
                </value>
                <value>
                    <fullName>Regional Management</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
                <value>
                    <fullName>WPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Regional_Contacts__c</fullName>
        <label>Regional Contacts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Australia/New Zealand Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Canada Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Central US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>East Central US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Europe Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>International Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Lat. America/Caribbean Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Mid. East/North Africa Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>North Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Northeastern US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Pacific US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>South Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Southern US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Western US Regional Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_YPO_Internal__c</fullName>
        <label>YPO Internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_YPO__c</fullName>
        <label>YPO</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion a Seminar</fullName>
                </value>
                <value>
                    <fullName>Champion a Youth/Family Program</fullName>
                </value>
                <value>
                    <fullName>Champion an Experience</fullName>
                </value>
                <value>
                    <fullName>Champion an Industry Roundtable</fullName>
                </value>
                <value>
                    <fullName>Event or Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Serve as a Resource</fullName>
                </value>
                <value>
                    <fullName>Serve YPO Gold Event Chair</fullName>
                </value>
                <value>
                    <fullName>Serve WPO Event Chair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID__c</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Golf_Clubs__c</fullName>
        <label>Golf Clubs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_Arts_and_Entertainment__c</fullName>
        <label>Arts and Entertainment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques</fullName>
                </value>
                <value>
                    <fullName>Art Collecting</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Community_Service__c</fullName>
        <label>Community Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Crime Prevention</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Humanitarian Activities</fullName>
                </value>
                <value>
                    <fullName>Inner City or Community</fullName>
                </value>
                <value>
                    <fullName>Museum</fullName>
                </value>
                <value>
                    <fullName>Religion and Spirituality</fullName>
                </value>
                <value>
                    <fullName>Senior Services</fullName>
                </value>
                <value>
                    <fullName>Veterans</fullName>
                </value>
                <value>
                    <fullName>Youth Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_General__c</fullName>
        <label>General</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Cigars</fullName>
                </value>
                <value>
                    <fullName>Collecting Wines</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Fine Dining</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Investing</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>Writing/Authorship</fullName>
                </value>
                <value>
                    <fullName>Yachting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Health__c</fullName>
        <label>Health</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Preventive Medicine</fullName>
                </value>
                <value>
                    <fullName>Stress Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Learning_More__c</fullName>
        <label>Learning More</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doing Business In China</fullName>
                </value>
                <value>
                    <fullName>Going into Public Service</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Exercise</fullName>
                </value>
                <value>
                    <fullName>Issues in Family Business</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Options for Your Next Career Move</fullName>
                </value>
                <value>
                    <fullName>Organizing for Community Change</fullName>
                </value>
                <value>
                    <fullName>Personal Investing</fullName>
                </value>
                <value>
                    <fullName>Serving on Corp. Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Lifestyle__c</fullName>
        <label>Lifestyle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charities/Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Community/Public Service</fullName>
                </value>
                <value>
                    <fullName>Environmental Preservation</fullName>
                </value>
                <value>
                    <fullName>Sustainable Development</fullName>
                </value>
                <value>
                    <fullName>Wildlife &amp; Habitat Preservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Outdoor__c</fullName>
        <label>Outdoor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Climbing</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Horses/Equestrian</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Kayaking</fullName>
                </value>
                <value>
                    <fullName>Motorcycles</fullName>
                </value>
                <value>
                    <fullName>Sailing</fullName>
                </value>
                <value>
                    <fullName>Scuba</fullName>
                </value>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Triathlon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Sports__c</fullName>
        <label>Sports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bicycling</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Ice Hockey</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Swimming</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Water Skiing</fullName>
                </value>
                <value>
                    <fullName>Windsurfing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Team_Sports__c</fullName>
        <label>Team Sports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Football</fullName>
                </value>
                <value>
                    <fullName>Football</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Travel__c</fullName>
        <label>Travel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Travel</fullName>
                </value>
                <value>
                    <fullName>Archeological/Historical</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Epicurean</fullName>
                </value>
                <value>
                    <fullName>Extreme Travel</fullName>
                </value>
                <value>
                    <fullName>Family Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques</fullName>
                </value>
                <value>
                    <fullName>Art Collecting</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
                <value>
                    <fullName>Buying Other Businesses</fullName>
                </value>
                <value>
                    <fullName>Career Transitions</fullName>
                </value>
                <value>
                    <fullName>CHLDFAMBUS</fullName>
                </value>
                <value>
                    <fullName>Developing My Board</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Africa</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Asia</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Australia/NZ</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Canada</fullName>
                </value>
                <value>
                    <fullName>Doing Business in China</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Europe</fullName>
                </value>
                <value>
                    <fullName>Doing Business in India</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Latin America</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Middle East</fullName>
                </value>
                <value>
                    <fullName>Doing Business in United States</fullName>
                </value>
                <value>
                    <fullName>Examining Corporate Strategy</fullName>
                </value>
                <value>
                    <fullName>Exiting Family Business</fullName>
                </value>
                <value>
                    <fullName>Family Business (General Issues)</fullName>
                </value>
                <value>
                    <fullName>Going Global</fullName>
                </value>
                <value>
                    <fullName>Hiring &amp; Retaining Execs</fullName>
                </value>
                <value>
                    <fullName>Mergers/Acquisitions</fullName>
                </value>
                <value>
                    <fullName>New Sources of Capital</fullName>
                </value>
                <value>
                    <fullName>Selling My Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>